--- a/Semantic.html
+++ b/Semantic.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel= "stylesheet" href=" /css/style.css" type="text/css">/
     <title>Semantic HTML</title>
 </head>
 <body>
@@ -25,15 +26,16 @@
 <main>
     <!-- Left Section-->
     <section>
-        <h1> Title 1</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, tenetur.
+        <h1 id="chapter"> Title 1</h1>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, tenetur.
         </p>
     </section>
 
     <!--Right Section-->
     <section>
-        <h1> Title 2</h1>
-        <p>
+        <h1 class="center">Title 2</h1>
+        <p class="center">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, praesentium.
     </p>
     </section>
