--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
+    <link rel="stylesheet" href=" /css/style.css" type="text/css">/
+    <style>
+      p{ 
+        size: 19px;
+        color:aliceblue green
+      }
+      h1{
+        size: 22px;
+        color:blue 
+      }
+    </style>
   </head>
-  <body>
+  <body style="background-color: powderblue; ">
     <p></p>
     <!-- Headers -->
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
+    <h3 style=" color:azure ; text-transform: uppercase">Heading 3</h3>
     <h4>Heading 4</h4>
     <h5>Heading 5</h5>
     <h6>heading 6</h6>
@@ -18,7 +29,7 @@
     <!-- Paragraph -->
     <p>My first paragapgh</p>
     <!-- Using Lorem Emmet -->
-    <p>
+    <p style=" background-color: pink;">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate neque
       ratione officiis expedita soluta eaque harum placeat maiores. Officia,
       amet!
