--- a/Semantic.html
+++ b/Semantic.html
@@ -51,7 +51,7 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit, nesciunt!
         </p>
 
-        <h1>Important artivle 2</h1>
+        <h1>Important article 2</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus amet nam iste incidunt laborum nemo id ex quidem itaque voluptate.</p>
         
     </article>
