--- a/index.html
+++ b/index.html
@@ -4,35 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
-    <link rel="stylesheet" href=" /css/style.css" type="text/css">/
+    <link rel="stylesheet" href="/CSS/style.css" type="text/css">
     <style>
-      p{ 
+      p {
         size: 19px;
-        color:aliceblue green
+        color: aqua;
       }
-      h1{
-        size: 22px;
-        color:blue 
+      h1 {
+        color: gray;
+        background-color: rgb(180, 127, 57);
       }
     </style>
   </head>
-  <body style="background-color: powderblue; ">
-    <p></p>
+  <body>
+  <body style="background-color:#ffffff">
     <!-- Headers -->
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
-    <h3 style=" color:azure ; text-transform: uppercase">Heading 3</h3>
+    <h3>Heading 3</h3>
+    <h3 style="color:red; text-transform: uppercase">Heading 3</h3>
     <h4>Heading 4</h4>
     <h5>Heading 5</h5>
-    <h6>heading 6</h6>
+    <h6>Heading 6</h6>
 
     <!-- Paragraph -->
-    <p>My first paragapgh</p>
+    <p>My first paragraph</p>
+    <p style="size: 19px; color: black">My first paragraph</p>
+
     <!-- Using Lorem Emmet -->
-    <p style=" background-color: pink;">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate neque
-      ratione officiis expedita soluta eaque harum placeat maiores. Officia,
-      amet!
+    <p>
+    <p style="background-color: rgb(17, 83, 105)">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex ipsa accusamus
+      explicabo distinctio at a doloremque natus. Dicta, nemo necessitatibus!
     </p>
   </body>
 </html>
+  
